# scsock

./: Cargo.toml  readme.md
.github/workflows/: release.yml  rust.yml
src/: cfg.rs  main.rs  msg.rs
